--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/stitch_fizzle_circular.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>StitchFizzle - Free Crochet Chart Creator</title>
     <meta name="description" content="Free, open-source crochet chart creator. Design C2C, colorwork, filet, mosaic, and freeform crochet patterns." />
